Arreglado el crossover

--- a/config.properties
+++ b/config.properties
@@ -4,19 +4,19 @@ graph_interval = 100
 
 # Opciones de visibilidad ( por defecto se escogera falso )
 # Valores permitidos { true , false }
-show_generate = true
-show_evaluate = true
-show_selected = true
+show_generate = false
+show_evaluate = false
+show_selected = false
 show_crossover = true
-show_mutate = true
+show_mutate = false
 
 # Opciones de probabilidad
 probability_mutation_per_chromosome = 10
 probability_mutation_per_gene = 5
 
 # Opciones de tamaño
-num_chromosomes = 12
-num_genes = 2
+num_chromosomes = 20
+num_genes = 4
 
 # Opcion de mutacion ( por defecto se escogera cromosoma )
 # Valores permitidos { chromosome , gene }
