--- a/config.properties
+++ b/config.properties
@@ -1,14 +1,14 @@
 # Opciones del grafico
-show_graph = false
-graph_interval = 100
+show_graph = true
+graph_interval = 1
 
 # Opciones de visibilidad ( por defecto se escogera falso )
 # Valores permitidos { true , false }
-show_generate = false
-show_evaluate = false
-show_selected = false
+show_generate = true
+show_evaluate = true
+show_selected = true
 show_crossover = true
-show_mutate = false
+show_mutate = true
 
 # Opciones de probabilidad
 probability_mutation_per_chromosome = 10
