--- a/config.properties
+++ b/config.properties
@@ -1,24 +1,23 @@
-# Opciones del grafico
+# Graph options
 show_graph = true
 graph_interval = 1
 
-# Opciones de visibilidad ( por defecto se escogera falso )
-# Valores permitidos { true , false }
+# Visibility options (by default it will be chosen false)
+# Allowed values {true, false}
 show_generate = true
 show_evaluate = true
 show_selected = true
 show_crossover = true
 show_mutate = true
 
-# Opciones de probabilidad
+# Probability options
 probability_mutation_per_chromosome = 10
 probability_mutation_per_gene = 5
 
-# Opciones de tamaño
+# Size options
 num_chromosomes = 20
 num_genes = 4
 
-# Opcion de mutacion ( por defecto se escogera cromosoma )
-# Valores permitidos { chromosome , gene }
-
+# Mutation option (by default chromosome will be chosen)
+# Allowed values {chromosome, gene}
 mutate = chromosome
