--- a/config.properties
+++ b/config.properties
@@ -4,11 +4,11 @@ graph_interval = 1
 
 # Visibility options (by default it will be chosen false)
 # Allowed values {true, false}
-show_generate = true
-show_evaluate = true
-show_selected = true
-show_crossover = true
-show_mutate = true
+show_generate = false
+show_evaluate = false
+show_selected = false
+show_crossover = false
+show_mutate = false
 
 # Probability options
 probability_mutation_per_chromosome = 10
