Ya no toco mas de verdad

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 # Graph options
-show_graph = true
+show_graph = false
 graph_interval = 1
 
 # Visibility options (by default it will be chosen false)
@@ -20,4 +20,4 @@ num_genes = 4
 
 # Mutation option (by default chromosome will be chosen)
 # Allowed values {chromosome, gene}
-mutate = chromosome
+mutate = gene
